--- a/game.css
+++ b/game.css
@@ -12,10 +12,26 @@ body, html
     width: 100%;
     height: 100%;
 }
+
+#gameName
+{
+    color: blue;
+    font-weight: bold;
+    font-size: 24px;
+    margin: 10px;
+}
  
 .canvas
 {
+    display: block;
     width: 100%;
-    height: 100%;
+    height: 500px;
     background: #000;
+    margin: 30px auto 0px;
+}
+
+#player
+{
+    display: block;
+    margin: -500px auto 0px;
 }
